Attempt to 'fix' buttons centring text on IE

--- a/SgAlpha2/FormUI/Content/sg.scss
+++ b/SgAlpha2/FormUI/Content/sg.scss
@@ -4,6 +4,10 @@
         padding: 6px 12px;
     }
 
+    .ie & button.button--primary {
+        padding-top: 25px;
+    }
+
     input:focus,
     textarea:focus,
     select:focus,
